--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="io.github.kabirnayeem99.friends">
+    package="io.github.christianfajardo.randomuser">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-        android:name=".FriendsApplication"
+        android:name="io.github.christianfajardo.randomuser.RandomUser"
         android:allowBackup="true"
         android:fullBackupContent="@xml/backup_descriptor"
         android:icon="@mipmap/ic_launcher"
@@ -18,10 +18,10 @@
         android:theme="@style/Theme.Friends"
         tools:remove="android:appComponentFactory">
         <activity
-            android:name=".presentation.userdetails.UserDetailsActivity"
+            android:name="io.github.christianfajardo.randomuser.presentation.userdetails.UserDetailsActivity"
             android:exported="true" />
         <activity
-            android:name=".presentation.landing.LandingActivity"
+            android:name="io.github.christianfajardo.randomuser.presentation.landing.LandingActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
