--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,6 +84,8 @@ dependencies {
     implementation 'io.reactivex.rxjava3:rxjava:3.x.x'
     implementation 'io.reactivex.rxjava3:rxandroid:3.x.x'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'com.google.android.gms:play-services-maps:17.0.1'
+
 
 
 
